fix Customers Overview, TransportService Overview now correctly uses observable list